--- a/docs/_static/colour.css
+++ b/docs/_static/colour.css
@@ -32,6 +32,10 @@
     border-color: #b53c86;
 } */
 
+.wy-menu-vertical .toctree-l2 a {
+    color: #000000; /* Set text color to black */
+}
+
 .wy-nav-side {
     background: #b2c0ff;
     color: #eef4ff;
