--- a/docs/_static/colour.css
+++ b/docs/_static/colour.css
@@ -1,14 +1,14 @@
 .wy-nav-top {
-    background-color: #b2c0ff;
+    background-color: #8198fd;
 }
 
 .wy-side-nav-search {
-    background-color: #b2c0ff;
+    background-color: #8198fd;
     color: #eef4ff;
 }
 
 .ul.wu-breadcrumbs::before {
-    color: #b2c0ff;
+    color: #8198fd;
 }
 
 .wy-side-nav-search.icon-home::before {
@@ -21,12 +21,12 @@
 
 .wy-menu-vertical .toctree-l1.current{
     background-color: #eef4ff;
-    color: #b2c0ff;
+    color: #8198fd;
 }
 
 .wy-menu-vertical .toctree-l2{
     background-color: #eef4ff;
-    color: #b2c0ff;
+    color: #8198fd;
     -webkit-text-fill-color: black;
 }
 /* .wy-side-nav-search input[type=text] {
@@ -35,7 +35,7 @@
 
 
 .wy-nav-side {
-    background: #b2c0ff;
+    background: #8198fd;
     color: #eef4ff;
 }
 
@@ -48,5 +48,5 @@
 } */
 
 .rst-versions {
-    border-top: solid 10px #b2c0ff;
+    border-top: solid 10px #8198fd;
 }
